<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <string name="details_shoe">Details Shoe</string>
    <string name="company_name_label">Company Name:</string>
    <string name="name_shoe">Name Shoe:</string>
    <string name="size_shoe">Size Shoe:</string>
    <string name="description_shoe">Description Shoe:</string>
    <string name="save">Save</string>
    <string name="company_of_shoe">Please type company name</string>
    <string name="name_of_shoe">Please type name shoe</string>
    <string name="size_of_shoe">Please type size shoe</string>
    <string name="description_of_shoe">Please type description shoe</string>
    <string name="start">Let\'s go</string>
    <string name="next">Next</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login">Login</string>
    <string name="plus">Plus</string>
    <string name="company_name">Company Name</string>
    <string name="size_shoe_text">Size Shoe</string>
    <string name="name_shoe_text">Name Shoe</string>
    <string name="next_page">Next</string>
    <string name="welcome_onboarding_fragment">Welcome onboarding fragment</string>
    <string name="welcome_instruction_onboarding_fragment">Welcome instruction onboarding fragment</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_shop_shoe">Welcome to shop shoe</string>
</resources>